--- a/ad688-sp25-lab01/index.qmd
+++ b/ad688-sp25-lab01/index.qmd
@@ -5,3 +5,5 @@ title: "JulioVargas"
 This is a Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+![](./images/image.jpeg){width=75% fig-align="center"}
